force-app/main/default/objects/HFS_Recommendation__c/HFS_Recommendation__c.object-meta.xml
<CustomObject>
    <description>Evidence-backed proposed intervention awaiting policy evaluation and approval.</description>
    <label>Recommendation</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>