force-app/main/default/objects/HFS_Recommendation__c/fields/Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Generated_At__c</fullName>
    <label>Generated At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>