force-app/main/default/objects/HFS_Recommendation__c/fields/Model_Invocation_Id__c.field-meta.xml
<CustomField>
    <fullName>Model_Invocation_Id__c</fullName>
    <label>Model Invocation ID</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>