force-app/main/default/objects/HFS_Recommendation__c/fields/Model_Profile__c.field-meta.xml
<CustomField>
    <fullName>Model_Profile__c</fullName>
    <label>Model Profile</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>