force-app/main/default/objects/HFS_Recommendation__c/fields/Primary_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Primary_Evidence__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Evidence</label>
    <referenceTo>HFS_Evidence__c</referenceTo>
    <relationshipLabel>Recommendations by Primary Evidence</relationshipLabel>
    <relationshipName>HFS_Recommendation_Primary_Evidence</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>