force-app/main/default/objects/HFS_Recommendation__c/fields/Proposed_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Action_Type__c</fullName>
    <label>Proposed Action Type</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>