force-app/main/default/objects/HFS_Recommendation__c/fields/Recommendation_Type__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Type__c</fullName>
    <label>Recommendation Type</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>