force-app/main/default/objects/HFS_Recommendation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DRAFT</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>PENDING_APPROVAL</fullName>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>APPROVED</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>REJECTED</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>EXPIRED</fullName>
                <label>Expired</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>