force-app/main/default/objects/HFS_Recommendation__c/fields/Subject_Entity__c.field-meta.xml
<CustomField>
    <fullName>Subject_Entity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Subject Entity</label>
    <referenceTo>HFS_Entity__c</referenceTo>
    <relationshipLabel>Recommendations by Subject Entity</relationshipLabel>
    <relationshipName>HFS_Recommendation_Subject_Entity</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>