force-app/main/default/objects/HFS_Recommendation__c/validationRules/Confidence_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Confidence_Range</fullName>
    <active>true</active>
    <description>Confidence must be between 0 and 1.</description>
    <errorConditionFormula>OR(Confidence__c &lt; 0, Confidence__c &gt; 1)</errorConditionFormula>
    <errorMessage>Confidence must be between 0 and 1.</errorMessage>
</ValidationRule>